--- a/FirstLook/app/src/main/res/values/strings.xml
+++ b/FirstLook/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">First Look</string>
+    <string name="button_name">Show Me!</string>
+    <string name="show_text">Hello there!</string>
 </resources>
