--- a/ToggleButton/app/src/main/res/values/strings.xml
+++ b/ToggleButton/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToggleButton</string>
+    <string name="peek_a_boo">Peek A Boo!</string>
+    <string name="hide_seek"><![CDATA[Hide & Seek]]></string>
+    <string name="toggle_button">Toggle Button</string>
 </resources>
