--- a/Checkboxes/app/src/main/res/values/strings.xml
+++ b/Checkboxes/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Checkboxes</string>
     <string name="title">Who\'s your favorite person?</string>
+    <string name="mom">Mom</string>
+    <string name="dad">Dad</string>
+    <string name="grandpa">Grandpa</string>
+    <string name="show_button">Show Answer</string>
 </resources>
