--- a/TipCalculator/app/src/main/res/values/strings.xml
+++ b/TipCalculator/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TipCalculator</string>
     <string name="tip_percentage">Tip Percentage</string>
+    <string name="calculate_text">Calculate Tip</string>
+    <string name="enter_bill">Enter your bill</string>
 </resources>
