--- a/MusicBox/app/src/main/res/values/strings.xml
+++ b/MusicBox/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Music Box</string>
+    <string name="song_name">Driven To Success</string>
+    <string name="artist_name">Scott Holmes</string>
 </resources>
