App SharedPrefs - Finish the App

--- a/SharedPrefs/app/src/main/res/values/strings.xml
+++ b/SharedPrefs/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Shared Prefs</string>
+    <string name="enter_name">Enter Something</string>
 </resources>
