App Honey Do List - Finish the App

--- a/HoneyDoList/app/src/main/res/values/strings.xml
+++ b/HoneyDoList/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Honey Do List</string>
+    <string name="todo_list">Enter your todo list</string>
 </resources>
